spade-tests/src/snapshots/spade_tests__linear_check__inv_from_pattern_binding_lhs_cannot_be_used.snap
---
source: spade-tests/src/linear_check.rs
---
entity e(p: inv &bool) {
    let q @ r = p;
    set q = &false;
}


error: Use of consumed resource
  ┌─ testinput:3:9
  │
2 │     let q @ r = p;
  │         - Previously used here
3 │     set q = &false;
  │         ^ Use of consumed resource
